Header/brand template

--- a/client/templates/layout/header/header.html
+++ b/client/templates/layout/header/header.html
@@ -1,5 +1,21 @@
 <template name="header">
-	<pre>
-		TEST
-	</pre>
+
+	<div class="container-fluid">
+		<nav class="nav" role="navigation">
+
+			<div class="row navbar-shop">
+
+				<div class="navbar-brand">{{> newHeaderBrand}}</div>
+
+				<div class="navbar-cart">{{> cartIcon}}</div>
+				<div class="cart-alert">{{> cartPanel}}</div>
+
+				<div class="navbar-accounts">{{> accounts tpl="loginDropdown"}}</div>
+				<div class="navbar-languages hidden-xs">{{> i18nChooser}}</div>
+
+			</div>
+
+		</nav>
+	</div>
+
 </template>
