--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -2,12 +2,15 @@
 * Header/Branding/Nav styling
 */
 
-.navbar-shop {
+.navbar-shop,
+.navbar-default {
 	background-color: #fff;
+	border: none;
 
 	&,
 	a, a:hover,
-	.dropdown-toggle {
+	.dropdown-toggle,
+	.navbar-brand {
 		color: @text-color;
 	}
 }
