--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -2,7 +2,7 @@
 * 10 A theme
 */
 
-// Header
+// Header - contains main navigation, language menu, user menu & cart
 @import "header/header.import.less";
 
 // Products
