--- a/client/themes/10a/products/products.import.less
+++ b/client/themes/10a/products/products.import.less
@@ -1,3 +1,18 @@
 /**
 * Single product styling
 */
+
+.variant-list-item {
+	.progress-bar-success {
+		opacity: 1;
+	}
+}
+
+.variant-detail {
+	height: 30px;
+	border-radius: 6px;
+}
+
+.variant-detail-selected {
+	border: 1px solid #ccc;
+}
