--- a/client/templates/layout/header/brand/brand.html
+++ b/client/templates/layout/header/brand/brand.html
@@ -1,3 +1,3 @@
 <template name="newHeaderBrand">
-	<a href="{{pathFor 'index'}}">10 A</a>
+	<a href="{{pathFor 'index'}}">10A Digtial</a>
 </template>
