--- a/client/templates/layout/footer/footer.html
+++ b/client/templates/layout/footer/footer.html
@@ -16,6 +16,7 @@
           </li>
         </ul>
       </div>
+
       <div class="col-xs-1 col-sm-1 col-md-2 col-lg-2">
         <ul class="list-unstyled">
           <li>
@@ -26,6 +27,9 @@
           </li>
           <li>
             <a href="{{pathFor 'faqs'}}" data-event-category="link" data-event-action="link-click" data-event-label="page link click" data-event-value="{{pathFor 'faqs'}}">Faqs</a>
+          </li>
+					<li>
+            <a href="{{pathFor 'newPage'}}"  data-event-category="link" data-event-action="link-click" data-event-label="page link click" data-event-value="{{pathFor 'newPage'}}">New Page</a>
           </li>
         </ul>
       </div>
