--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -2,6 +2,12 @@
 * 10 A theme
 */
 
+// Variables
+@import "vars.import.less";
+
+// Common
+@import "common.import.less";
+
 // Header - contains main navigation, language menu, user menu & cart
 @import "header/header.import.less";
 
