--- a/client/themes/10a/products/products.import.less
+++ b/client/themes/10a/products/products.import.less
@@ -16,3 +16,8 @@
 .variant-detail-selected {
 	border: 1px solid #ccc;
 }
+
+.add-to-cart-text {
+	margin: 0 !important;
+	font-size: inherit !important;
+}
