--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -9,7 +9,8 @@
 @import "common.import.less";
 
 // Header - contains main navigation, language menu, user menu & cart
-@import "header/header.import.less";
+
+@import "footer/footer.import.less";
 
 // Products
 @import "products/products.import.less";
