--- a/client/templates/layout/footer/footer.html
+++ b/client/templates/layout/footer/footer.html
@@ -4,6 +4,7 @@
             <div class="col-xs-12">
                 <div class="footer-nav">
                     <ul>
+                        <!-- @todo add links to tags/pages -->
                         <li><a href="{{pathFor 'index'}}" class="brand">10A</a></li>
                         <li><a href="#">Showing</a></li>
                         <li><a href="#">Prints</a></li>
