--- a/client/templates/layout/header/header.html
+++ b/client/templates/layout/header/header.html
@@ -12,8 +12,8 @@
 		</div>
 		<div class="slide" style="background-image: url();">
 			<div class="container-fluid">
-				<h1 class="slide-title">Featured Artist</h1>
-				<h2>Matt Fawkes</h2>
+				<h2 class="slide-title">Featured Artist</h2>
+				<h1>Matt Fawkes</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
 				<!-- @todo link to page -->
 				<a href="" class="btn btn-sm btn-10a">View</a>
@@ -21,8 +21,17 @@
 		</div>
 		<div class="slide" style="background-image: url();">
 			<div class="container-fluid">
-				<h1 class="slide-title">Featured Artist</h1>
-				<h2>Matt Fawkes</h2>
+				<h2 class="slide-title">Featured Print</h2>
+				<h1>Lorem ipsum</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+				<!-- @todo link to page -->
+				<a href="" class="btn btn-sm btn-10a">View</a>
+			</div>
+		</div>
+		<div class="slide" style="background-image: url();">
+			<div class="container-fluid">
+				<h2 class="slide-title">Another slide</h2>
+				<h1>Lorem ipsum</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
 				<!-- @todo link to page -->
 				<a href="" class="btn btn-sm btn-10a">View</a>
