--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -8,8 +8,8 @@
 // Common
 @import "common.import.less";
 
-// Header - contains main navigation, language menu, user menu & cart
-
+// Template Areas
+@import "header/header.import.less";
 @import "footer/footer.import.less";
 
 // Products
