Showing page template/route

--- a/client/templates/layout/footer/footer.html
+++ b/client/templates/layout/footer/footer.html
@@ -6,7 +6,7 @@
                     <ul>
                         <!-- @todo add links to tags/pages -->
                         <li><a href="{{pathFor 'index'}}" class="brand">10A</a></li>
-                        <li><a href="#">Showing</a></li>
+                        <li><a href="{{pathFor 'showing'}}">Showing</a></li>
                         <li><a href="#">Prints</a></li>
                         <li><a href="#">Artists</a></li>
                         <li><a href="#">Cart</a></li>
