remove old static pages, update footer links

--- a/client/templates/static/prints.html
+++ b/client/templates/static/prints.html
@@ -1,11 +1,11 @@
-<template name="showing">
+<template name="prints">
     <div class="page-header" style="background-image: url();">
-		<h1>10A Prints Launch Show</h1>
+		<h1>Prints</h1>
 	</div>
 
   <div class="container">
       <div class="row">
-          
+
       </div>
   </div>
 </template>
