--- a/client/templates/layout/footer/footer.html
+++ b/client/templates/layout/footer/footer.html
@@ -4,11 +4,11 @@
             <div class="col-xs-12">
                 <div class="footer-nav">
                     <ul>
-                        <!-- @todo add links to tags/pages -->
                         <li><a href="{{pathFor 'index'}}" class="brand">10A</a></li>
                         <li><a href="{{pathFor 'showing'}}">Showing</a></li>
-                        <li><a href="#">Prints</a></li>
-                        <li><a href="#">Artists</a></li>
+                        <li><a href="{{pathFor 'prints'}}">Prints</a></li>
+                        <li><a href="{{pathFor 'artists'}}">Artists</a></li>
+                        <!-- @todo add links to cart -->
                         <li><a href="#">Cart</a></li>
                     </ul>
                 </div>
