--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -1,3 +1,7 @@
+main{
+    padding: 0;
+}
+
 .carousel{
     .slide{
         background-color: @black;
@@ -19,6 +23,7 @@
         h1{
             font-size: 29px;
             text-transform: uppercase;
+            margin-top: 0;
         }
 
         h2{
@@ -31,5 +36,22 @@
             font-family: Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
             font-size: 16px;
         }
+    }
+}
+
+.page-header{
+    background-color: @black;
+    color: @white;
+    padding: 20px 15px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    margin-top: 0;
+
+    h1{
+        color: @white;
+        font-size: 29px;
+        text-transform: uppercase;
+        margin: 0;
     }
 }
