homepage static label

--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -37,4 +37,9 @@
             </div>
         </div>
     </div>
-</template> 
+    <div class="row">
+        <div class="col-sm-12">
+            <h3 class="static-label">Current Show</h3>
+        </div>
+    </div>
+</template>
