Added container-main wrapper to homepage template

--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -37,9 +37,12 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <h3 class="static-label">Current Show</h3>
-        </div>
-    </div>
+
+	<div class="container-main">
+	    <div class="row">
+	        <div class="col-sm-12">
+	            <h3 class="static-label">Current Show</h3>
+	        </div>
+	    </div>
+	</div>
 </template>
