--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -1,9 +1,13 @@
 main{
     padding: 0;
+
+    .page-content{
+        padding: 0 10px;
+    }
 }
 
-.carousel{
-    .slide{
+.swiper-container{
+    .swiper-slide{
         background-color: @black;
         padding: 10px;
         background-size: cover;
