--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -1,34 +1,28 @@
 <template name="homepage">
-    <div class="carousel">
-        <div class="slide" style="background-image: url();">
-            <div class="container-fluid">
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide slide-1">
                 <h2 class="slide-title">Showing</h2>
                 <h1>10A Prints<br>Launch Show</h1>
                 <p>Letterpress and digital prints by the design and development team at 10A Prints</p>
                 <!-- @todo link to page -->
                 <a href="" class="btn btn-sm btn-10a">View</a>
             </div>
-        </div>
-        <div class="slide" style="background-image: url();">
-            <div class="container-fluid">
+            <div class="swiper-slide slide-2">
                 <h2 class="slide-title">Featured Artist</h2>
                 <h1>Matt Fawkes</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
                 <!-- @todo link to page -->
                 <a href="" class="btn btn-sm btn-10a">View</a>
             </div>
-        </div>
-        <div class="slide" style="background-image: url();">
-            <div class="container-fluid">
+            <div class="swiper-slide slide-3">
                 <h2 class="slide-title">Featured Print</h2>
                 <h1>Lorem ipsum</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
                 <!-- @todo link to page -->
                 <a href="" class="btn btn-sm btn-10a">View</a>
             </div>
-        </div>
-        <div class="slide" style="background-image: url();">
-            <div class="container-fluid">
+            <div class="swiper-slide slide-4">
                 <h2 class="slide-title">Another slide</h2>
                 <h1>Lorem ipsum</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
@@ -36,13 +30,13 @@
                 <a href="" class="btn btn-sm btn-10a">View</a>
             </div>
         </div>
+        <div class="swiper-pagination"></div>
     </div>
-
-	<div class="container-main">
-	    <div class="row">
-	        <div class="col-sm-12">
-	            <h3 class="static-label">Current Show</h3>
-	        </div>
-	    </div>
-	</div>
+    <div class="page-content">
+        <div class="row">
+            <div class="col-sm-12">
+                <h3 class="static-label">Current Show</h3>
+            </div>
+        </div>
+    </div>
 </template>
