--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -1,4 +1,5 @@
 <template name="homepage">
+
     <div class="carousel">
         <div class="slide" style="background-image: url();">
             <div class="container-fluid">
@@ -42,6 +43,11 @@
 	    <div class="row">
 	        <div class="col-sm-12">
 	            <h3 class="static-label">Current Show</h3>
+                <pre>
+                    {{#each showProducts}}
+                        {{title}}
+                    {{/each}}
+                </pre>
 	        </div>
 	    </div>
 	</div>
