--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -37,6 +37,7 @@
 	    <div class="row">
 	        <div class="col-sm-12">
 	            <h3 class="static-label">Current Show</h3>
+                <h2>{{showTag.name}}</h2>
                 <pre>
                     {{#each showProducts}}
                         {{title}}
