styling can begin!

--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -11,6 +11,7 @@
 // Template Areas
 @import "header/header.import.less";
 @import "footer/footer.import.less";
+@import "content/content.import.less";
 
 // Products
 @import "products/products.import.less";
