--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -1,8 +1,8 @@
 main{
     padding: 0;
 
-    .page-content{
-        padding: 0 10px;
+    .container-main{
+        padding: 10px;
     }
 }
 
@@ -13,6 +13,7 @@ main{
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
+        min-height: 330px;
 
         h1, h2, p, a{
             color: @white;
