browser policy for external resources

--- a/client/templates/layout/layout.html
+++ b/client/templates/layout/layout.html
@@ -1,3 +1,8 @@
+<head>
+	<script src="https://use.typekit.net/kej2gbd.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+</head>
+
 <template name="layout">
 	<!-- to use, implement Template.layout.replaces "coreLayout" -->
 	<span id="layout-alerts">{{>bootstrapAlerts}}</span>
