--- a/client/themes/10a/content/content.import.less
+++ b/client/themes/10a/content/content.import.less
@@ -5,3 +5,7 @@
     border-bottom: 1px solid @grey;
     padding-bottom: 2px;
 }
+
+h1, h2, h3, h4, h5, h6{
+    font-family: "aktiv-grotesk", sans-serif;
+}
