--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -23,6 +23,8 @@ main{
             text-transform: uppercase;
             border: 1px solid @white;
             border-radius: 0;
+            display: inline-block;
+            padding: 8px 10px;
         }
 
         h1{
@@ -41,6 +43,10 @@ main{
             font-family: Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
             font-size: 16px;
         }
+    }
+
+    .swiper-pagination-bullet{
+        background-color: rgba(255,255,255,0.75);
     }
 }
 
