--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -24,7 +24,13 @@ main{
             border: 1px solid @white;
             border-radius: 0;
             display: inline-block;
-            padding: 8px 10px;
+            padding: 5px 30px;
+            font-size: 16px;
+
+            &:hover, &:active, &:focus{
+                background-color: @white;
+                color: @black;
+            }
         }
 
         h1{
