--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -26,28 +26,27 @@ main{
             display: inline-block;
             padding: 5px 30px;
             font-size: 16px;
-
-            &:hover, &:active, &:focus{
-                background-color: @white;
-                color: @black;
-            }
         }
 
         h1{
             font-size: 29px;
             text-transform: uppercase;
             margin-top: 0;
+            line-height: 1.25em;
+            margin-bottom: 16px;
         }
 
         h2{
             font-size: 15px;
             text-transform: uppercase;
             font-weight: bold;
+            margin-bottom: 16px;
         }
 
         p{
             font-family: Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
             font-size: 16px;
+            margin-bottom: 16px;
         }
     }
 
