Added admin menu

--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -36,6 +36,9 @@
 	<div class="container-main">
 	    <div class="row">
 	        <div class="col-sm-12">
+
+                {{> accounts tpl="loginDropdown"}}
+
 	            <h3 class="static-label">Current Show</h3>
                 <h2>{{showTag.name}}</h2>
                 <pre>
