--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -37,7 +37,9 @@
 	    <div class="row">
 	        <div class="col-sm-12">
 
-                {{> accounts tpl="loginDropdown"}}
+                {{#if currentUser}}
+                    {{> accounts tpl="loginDropdown"}}
+                {{/if}}
 
 	            <h3 class="static-label">Current Show</h3>
                 <h2>{{showTag.name}}</h2>
