--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -42,7 +42,7 @@
                 {{/if}}
 
 	            <h3 class="static-label">Current Show</h3>
-                <h2>{{showTag.name}}</h2>
+                <h2 class="show-tag-title">{{showTag.name}}</h2>
                 <pre>
                     {{#each showProducts}}
                         {{title}}
