Show products with images

--- a/client/themes/10a/common.import.less
+++ b/client/themes/10a/common.import.less
@@ -31,3 +31,16 @@
 		color: #fff;
 	}
 }
+
+
+/**
+* Home product images
+*/
+
+.show-product-images {
+	.product-image {
+		height: 30vh;
+		background-size: cover;
+		background-position: center;
+	}
+}
