--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -1,4 +1,5 @@
 <template name="homepage">
+
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide slide-1">
@@ -42,12 +43,26 @@
                 {{/if}}
 
 	            <h3 class="static-label">Current Show</h3>
+
                 <h2 class="show-tag-title">{{showTag.name}}</h2>
-                <pre>
-                    {{#each showProducts}}
-                        {{title}}
-                    {{/each}}
-                </pre>
+
+                {{#each showProducts}}
+                    {{#if isVisible}}
+                        <div class="show-print">
+                            <h3 class="show-product-title">{{title}}</h3>
+
+                            <div class="product-primary-images show-product-images">
+                                {{#with media}}
+                                    <div class="product-image" style="background-image: url('{{url store='large'}}')"></div>
+                                {{else}}
+                                  <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
+                                {{/with}}
+                            </div>
+
+                            <hr>
+                        </div>
+                    {{/if}}
+                {{/each}}
 	        </div>
 	    </div>
 	</div>
