--- a/client/themes/10a/footer/footer.import.less
+++ b/client/themes/10a/footer/footer.import.less
@@ -1,18 +1,19 @@
 footer.reaction-navigation-footer{
-    background: @black;
+	@footer-bgc: @black;
+
+    background: @footer-bgc;
     color: @white;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 50px;
     box-sizing: border-box;
     padding: 0;
 
     .footer-nav{
-        padding: 0 10px;
+        padding: 0;
 
         ul{
-            padding: 16px 0;
+            padding: 0;
             margin: 0;
             list-style: none;
             overflow: auto;
@@ -30,13 +31,20 @@ footer.reaction-navigation-footer{
                 }
 
                 a{
+					display: block;
+					padding: 15px 0;
                     color: @white;
                     text-transform: uppercase;
                     font-weight: bold;
+
+					&:hover,
+					&:active,
+					&:focus {
+						text-decoration: none;
+						background-color: lighten(@footer-bgc, 20%);
+					}
                 }
             }
         }
-
-
     }
 }
