Added Swiper instance for 'Current Show'

--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -46,23 +46,28 @@
 
                 <h2 class="show-tag-title">{{showTag.name}}</h2>
 
-                {{#each showProducts}}
-                    {{#if isVisible}}
-                        <div class="show-print">
-                            <h3 class="show-product-title">{{title}}</h3>
+				<div class="show-swiper-container">
+					<div class="swiper-wrapper">
 
-                            <div class="product-primary-images show-product-images">
-                                {{#with media}}
-                                    <div class="product-image" style="background-image: url('{{url store='large'}}')"></div>
-                                {{else}}
-                                  <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
-                                {{/with}}
-                            </div>
+		                {{#each showProducts}}
+		                    {{#if isVisible}}
+		                        <div class="show-print swiper-slide">
+		                            <h3 class="show-product-title">{{title}}</h3>
 
-                            <hr>
-                        </div>
-                    {{/if}}
-                {{/each}}
+		                            <div class="product-primary-images show-product-images">
+		                                {{#with media}}
+		                                    <div class="product-image" style="background-image: url('{{url store='large'}}')"></div>
+		                                {{else}}
+		                                  <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
+		                                {{/with}}
+		                            </div>
+		                        </div>
+		                    {{/if}}
+		                {{/each}}
+
+					</div>
+				</div><!-- .show-swiper-container -->
+
 	        </div>
 	    </div>
 	</div>
