Re-added cart button

--- a/client/templates/layout/footer/footer.html
+++ b/client/templates/layout/footer/footer.html
@@ -9,7 +9,7 @@
                         <li><a href="{{pathFor 'prints'}}">Prints</a></li>
                         <li><a href="{{pathFor 'artists'}}">Artists</a></li>
                         <!-- @todo add links to cart -->
-                        <li><a href="#">Cart</a></li>
+                        <li><a href="#">{{> cartIcon}}</a></li>
                     </ul>
                 </div>
             </div>
