--- a/client/templates/layout/header/header.html
+++ b/client/templates/layout/header/header.html
@@ -1,3 +1,3 @@
 <template name="header">
-	<!-- @todo If statment to show on home page only -->
+	<div class="cart-alert">{{> cartPanel}}</div>
 </template>
