footer overlay fix

--- a/client/themes/10a/footer/footer.import.less
+++ b/client/themes/10a/footer/footer.import.less
@@ -8,6 +8,7 @@ footer.reaction-navigation-footer{
     width: 100%;
     box-sizing: border-box;
     padding: 0;
+	z-index: 10;
 
     .footer-nav{
         padding: 0;
