--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -2,6 +2,9 @@
 
     <div class="swiper-container">
         <div class="swiper-wrapper">
+            {{#each showSlides}}
+                1
+            {{/each}}
             <div class="swiper-slide slide-1">
                 <h2 class="slide-title">Showing</h2>
                 <h1>10A Prints<br>Launch Show</h1>
