--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -6,6 +6,24 @@ main{
     }
 }
 
+.reaction-navigation-header{
+    padding: 10px;
+
+    .btn-circle{
+        border-radius: 50%;
+    }
+
+    .back-button, .search-box{
+        .btn{
+            width: 34px;
+            padding: 6px 10px;
+            background-color: @black;
+            color: @white;
+            border-color: @black;
+        }
+    }
+}
+
 .swiper-container{
     .swiper-slide{
         background-color: @black;
