--- a/client/templates/layout/header/header.html
+++ b/client/templates/layout/header/header.html
@@ -1,3 +1,20 @@
 <template name="header">
 	<div class="cart-alert">{{> cartPanel}}</div>
+	<div class="row">
+		<div class="col-xs-6 back-button">
+			<a href="#" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-chevron-left"></i></a>
+		</div>
+		<div class="col-xs-6 search-box text-right">
+			<form class="form-inline">
+				<div class="input-group">
+					<input type="text" class="form-control">
+					<span class="input-group-btn">
+						<button type="submit" class="btn btn-primary">
+							<i class="glyphicon glyphicon-search"></i>
+						</button>
+					</span>
+				</div>
+			</form>
+		</div>
+	</div>
 </template>
