--- a/client/templates/static/homepage.html
+++ b/client/templates/static/homepage.html
@@ -55,8 +55,6 @@
 		                {{#each showProducts}}
 		                    {{#if isVisible}}
 		                        <div class="show-print swiper-slide">
-		                            <h3 class="show-product-title">{{title}}</h3>
-
 		                            <div class="product-primary-images show-product-images">
 		                                {{#with media}}
 		                                    <div class="product-image" style="background-image: url('{{url store='large'}}')"></div>
@@ -64,6 +62,9 @@
 		                                  <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
 		                                {{/with}}
 		                            </div>
+                                    <h3 class="show-product-title">Artist Name</h3>
+                                    <p><em>{{title}}</em> 2015</p>
+                                    <p>Letterpress Print</p>
 		                        </div>
 		                    {{/if}}
 		                {{/each}}
@@ -76,11 +77,9 @@
                 <div class="show-swiper-container">
 					<div class="swiper-wrapper">
 
-		                {{#each showProducts}}
+                        {{#each showProducts}}
 		                    {{#if isVisible}}
 		                        <div class="show-print swiper-slide">
-		                            <h3 class="show-product-title">{{title}}</h3>
-
 		                            <div class="product-primary-images show-product-images">
 		                                {{#with media}}
 		                                    <div class="product-image" style="background-image: url('{{url store='large'}}')"></div>
@@ -88,6 +87,9 @@
 		                                  <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
 		                                {{/with}}
 		                            </div>
+                                    <h3 class="show-product-title">Artist Name</h3>
+                                    <p><em>{{title}}</em> 2015</p>
+                                    <p>Letterpress Print</p>
 		                        </div>
 		                    {{/if}}
 		                {{/each}}
