hide header class added

--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -6,6 +6,12 @@ main{
     }
 }
 
+.hide-header{
+    .reaction-navigation-header{
+        display: none;
+    }
+}
+
 .reaction-navigation-header{
     background-color: @white;
     padding: 10px;
