Remove debug logging; clean-up

--- a/client/templates/layout/header/header.html
+++ b/client/templates/layout/header/header.html
@@ -2,7 +2,7 @@
 	<div class="cart-alert">{{> cartPanel}}</div>
 	<div class="row">
 		<div class="col-xs-6 back-button">
-			<a href="#" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-chevron-left"></i></a>
+			<a class="btn btn-default btn-circle"><i class="glyphicon glyphicon-chevron-left"></i></a>
 		</div>
 		<div class="col-xs-6 search-box text-right">
 			<form class="form-inline">
