--- a/client/themes/10a/header/header.import.less
+++ b/client/themes/10a/header/header.import.less
@@ -13,8 +13,12 @@ main{
 }
 
 .reaction-navigation-header{
+    position: fixed;
     background-color: @white;
     padding: 10px;
+    width: 100%;
+    top: 0;
+    z-index: 10;
 
     .btn-circle{
         border-radius: 50%;
