Added dynamic fields to show slider; printYear() method; toTitleCase() on artist names

--- a/client/templates/homepage/homepage.html
+++ b/client/templates/homepage/homepage.html
@@ -45,8 +45,8 @@
 		                                {{/with}}
 		                            </div>
                                     <h3 class="show-product-title">{{printsArtistName _id}}</h3>
-                                    <p><em>{{title}}</em> 2015</p>
-                                    <p>Letterpress Print</p>
+                                    <p><em>{{title}}</em> {{printYear _id}}</p>
+                                    <p>{{description}}</p>
 		                        </div>
 		                    {{/if}}
 		                {{/each}}
