--- a/client/themes/10a/common.import.less
+++ b/client/themes/10a/common.import.less
@@ -11,6 +11,14 @@ body.hide-header {
 	padding: 30px;
 }
 
+/**
+* Headings
+*/
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+	color: @black;
+}
+
 
 /**
 * Forms
