Fixed main Swiper reloading issue

--- a/client/templates/homepage/homepage.html
+++ b/client/templates/homepage/homepage.html
@@ -1,23 +1,6 @@
 <template name="homepage">
 
-	{{#if homeSlides}}
-	    <div class="swiper-container main-swiper-container">
-	        <div class="swiper-wrapper">
-
-				{{#each homeSlides}}
-		            <div class="swiper-slide slide-{{@index}}" style="background-image:url({{slideImgPath}}{{background_image}})">
-		                <h2 class="h2 slide-subtitle ">{{subtitle}}</h2>
-		                <h1 class="h1 slide-title">{{{title}}}</h1>
-		                <p class="slide-caption">{{strapline}}</p>
-		                <a href="{{cta_link}}" class="slide-link btn btn-sm btn-10a">{{cta_text}}</a>
-		            </div>
-				{{/each}}
-
-			</div>
-			<div class="swiper-pagination"></div>
-	    </div>
-	{{/if}}
-
+	{{> homeSlides}}
 
 	<div class="container-main">
 	    <div class="row">
