--- a/client/templates/homepage/homepage.html
+++ b/client/templates/homepage/homepage.html
@@ -12,30 +12,9 @@
 
 	            <h3 class="static-label">Current Show</h3>
 
-                <h2 class="show-tag-title">{{showTag.name}}</h2>
+                <h2 class="show-tag-title">{{showTagName}}</h2>
 
-				<div class="show-swiper-container">
-					<div class="swiper-wrapper">
-
-		                {{#each showProducts}}
-		                    {{#if isVisible}}
-		                        <div class="show-print swiper-slide">
-		                            <div class="product-primary-images show-product-images">
-		                                {{#with media}}
-		                                    <div class="product-image" style="background-image: url('{{url store='large'}}')"></div>
-		                                {{else}}
-		                                  <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
-		                                {{/with}}
-		                            </div>
-                                    <h3 class="show-product-title">{{title}}</h3>
-                                    <p><em>{{printsArtistName _id}}</em> {{printYear _id}}</p>
-                                    <p>{{description}}</p>
-		                        </div>
-		                    {{/if}}
-		                {{/each}}
-
-					</div>
-				</div><!-- .show-swiper-container -->
+				{{> showSlides}}
 
                 <h2 class="show-tag-title">Artists</h2>
 
