--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -13,5 +13,7 @@
 @import "footer/footer.import.less";
 @import "content/content.import.less";
 
+@import "homepage/homepage.import.less";
+
 // Products
 @import "products/products.import.less";
