--- a/client/templates/showing/showing.html
+++ b/client/templates/showing/showing.html
@@ -1,4 +1,5 @@
 <template name="showing">
+	{{! TODO: Showing page background image }}
     <div class="page-header" style="background-image: url();">
 		<h1>10A Prints Launch Show</h1>
 	</div>
@@ -18,7 +19,7 @@
                 <div class="show-swiper-container">
                     <div class="swiper-wrapper">
 
-                        {{#each showProducts}}
+                        {{#each slides}}
                             {{#if isVisible}}
                                 <div class="show-print swiper-slide">
                                     <div class="product-primary-images show-product-images">
@@ -28,9 +29,9 @@
                                           <div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
                                         {{/with}}
                                     </div>
-                                    <h3 class="show-product-title">Artist Name</h3>
-                                    <p><em>{{title}}</em> 2015</p>
-                                    <p>Letterpress Print</p>
+                                    <h3 class="show-product-title">{{title}}</h3>
+                                    <p><em>{{printsArtistName _id}}</em> {{printYear _id}}</p>
+                                    <p>{{description}}</p>
                                 </div>
                             {{/if}}
                         {{/each}}
