Removed toTitleCase() from printsArtistName() & called in template instead

--- a/client/templates/showing/showing.html
+++ b/client/templates/showing/showing.html
@@ -30,7 +30,7 @@
                                         {{/with}}
                                     </div>
                                     <h3 class="show-product-title">{{title}}</h3>
-                                    <p><em>{{printsArtistName _id}}</em> {{printYear _id}}</p>
+                                    <p><em>{{toTitleCase (printsArtistName _id)}}</em> {{printYear _id}}</p>
                                     <p>{{description}}</p>
                                 </div>
                             {{/if}}
