--- a/client/themes/10a/10a.import.less
+++ b/client/themes/10a/10a.import.less
@@ -13,7 +13,9 @@
 @import "footer/footer.import.less";
 @import "content/content.import.less";
 
+// Pages
 @import "homepage/homepage.import.less";
+@import "artists/artists.import.less";
 
 // Products
 @import "products/products.import.less";
