--- a/client/templates/homepage/homepage.html
+++ b/client/templates/homepage/homepage.html
@@ -10,13 +10,15 @@
                     {{> accounts tpl="loginDropdown"}}
                 {{/if}}
 
-	            <h3 class="static-label">Current Show</h3>
+	            <h3 class="h3 current-show-title">Current Show</h3>
 
-                <h2 class="show-tag-title">{{showTag.name}}</h2>
+                <h2 class="h2 show-tag-title">{{showTag.name}}</h2>
 
 				{{> showSlides}}
 
-                <h2 class="show-tag-title">Artists</h2>
+				<hr>
+
+                <h2 class="h2 show-tag-title">Artists</h2>
 
 				{{> artistSlides}}
 	        </div>
