--- a/client/themes/10a/footer/footer.import.less
+++ b/client/themes/10a/footer/footer.import.less
@@ -1,4 +1,4 @@
-footer.reaction-navigation-footer{
+footer.reaction-navigation-footer {
 	@footer-bgc: @black;
 
 	background: @footer-bgc;
@@ -10,16 +10,22 @@ footer.reaction-navigation-footer{
 	padding: 0;
 	z-index: 10;
 
-	.footer-nav{
+	.footer-nav {
 		padding: 0;
+		font-family: @sans_serif;
+		font-size: 12px;
 
-		ul{
+		@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+			font-size: 16px;
+		}
+
+		ul {
 			padding: 0;
 			margin: 0;
 			list-style: none;
 			overflow: auto;
 
-			li{
+			li {
 				display: block;
 				margin: 0;
 				padding: 0;
@@ -27,7 +33,7 @@ footer.reaction-navigation-footer{
 				float: left;
 				text-align: center;
 
-				&:first-child{
+				&:first-child {
 					width: 10%;
 				}
 
