--- a/client/templates/homepage/artistSlides.html
+++ b/client/templates/homepage/artistSlides.html
@@ -2,9 +2,8 @@
 	<div class="artists-swiper-container">
 		<div class="swiper-wrapper">
 
-			{{#each artist in (printsByArtist 3)}}
+			{{#each artist in (printsByArtist 1)}}
 				<div class="swiper-slide">
-					<h3 class="h3">{{toTitleCase artist.name}}</h3>
 
 					{{#each print in artist.prints}}
 						<div class="print">
@@ -15,7 +14,9 @@
 								<div class="product-image" style="background-image: url(/resources/placeholder.gif)"></div>
 							{{/with}}
 
-							<h4 class="h4">{{print.title}}</h4>
+							<h3 class="h3 artist-name">{{toUpperCase artist.name}}</h3>
+							<h4 class="h4 print-title"><em>{{print.title}}</em>, {{printYear print._id}}</h4>
+							<p class="description">{{print.description}}</p>
 						</div>
 					{{/each}}
 				</div>
