--- a/client/templates/homepage/homepage.html
+++ b/client/templates/homepage/homepage.html
@@ -18,7 +18,7 @@
 
 				<hr>
 
-                <h2 class="h2 show-tag-title">Artists</h2>
+                <h2 class="h2 show-tag-title">10A Artists</h2>
 
 				{{> artistSlides}}
 	        </div>
